When partition is full, QIODevice::writeBlock will not return -1 as error, but 0 for zero bytes written.

BUG: 136903

svn path=/trunk/extragear/graphics/digikam/; revision=619537